[package]
name = "hostel"
version = "0.1.0"
authors = ["Denbeigh Stevens <denbeigh@denbeighstevens.com>"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bb8-redis = "0.10"
bollard = "0.11"
clap = { version = "3.0", features = ["default", "derive", "env"] }
futures = "0.3"
log = "0.4"
serde = "1.0"
serde_yaml = "0.8"
simplelog = "0.11"
thiserror = "1.0"
thrussh = { version = "0.33", features = ["openssl", "flate2"] }
thrussh-keys = { version = "0.21", features = ["openssl"] }
thrussh-libsodium = "0.2"
tokio = { version = "1", features = ["full"] }
